2003-06-19  Nick Garnett  <nickg@balti.calivar.com>

	* src/hal_if.c (delay_us): Reorganized to cope with high frequency
	timers by eliminating a source of arithmetic overflow. 

2003-05-06  Mark Salter  <msalter@redhat.com>

	* src/hal_stub.c (handle_exception_exit): Call sys_profile_reset from
	here. Setup to return through return_from_stub() when appropriate.
	(return_from_stub): New function to call CYGACC_CALL_IF_MONITOR_RETURN
	from thread context.

	* src/generic-stub.c (__handle_exception): Call exit_vec if
	hal_syscall_handler returns negative number.

2003-04-08  Mark Salter  <msalter@redhat.com>

	* src/hal_misc.c (hal_default_isr): Allow HAL to override default
	GDB vector matching test.

2003-04-08  Yoshinori Sato  <qzb04471@nifty.ne.jp>
2003-04-08  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/debugging.cdl: Allow CRC to be allocated in ROM as well as RAM.
	* src/generic-stub.c: as above.

2003-04-02  Gary Thomas  <gary@mlbassoc.com>

	* src/generic-stub.c: 
	* include/generic-stub.h: Cleanup when program args are not
	supported (remove some unused static storage).

2003-03-03  Knud Woehler <knud.woehler@microplex.de>

	* src/hal_if.c:
	* include/hal_if.h: Add CYGNUM_CALL_IF_FLASH_FIS_OP. FIS read
	via the virtual vector table.
	
2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/hal.cdl: Fix doc links.

	* doc/hal.sgml: hal-common-current-doc-porting-sgml entity ->
	hal-common-porting-sgml in line with other docs.

2003-02-13  Mark Salter  <msalter@redhat.com>

	* src/gdb-fileio.h (FILEIO_O_BINARY): New flag.
	(FILEIO_O_TEXT): New flag.

2003-01-31  Mark Salter  <msalter@redhat.com>

	* include/hal_if.h: Add CYGNUM_CALL_IF_MONITOR_RETURN.

2002-12-04  Gary Thomas  <gthomas@ecoscentric.com>

	* cdl/hal.cdl: RAM applications should not claim (reset) version
	string by default.

2002-12-03  Gary Thomas  <gthomas@ecoscentric.com>

	* src/hal_if.c (hal_if_init): 
	* include/hal_if.h: 